--- a/app/src/main/res/layout/cart_page.xml
+++ b/app/src/main/res/layout/cart_page.xml
@@ -1,175 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <ImageButton
+        android:id="@+id/btBack"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:background="@drawable/back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cart"
+        android:textColor="@color/white"
+        android:textSize="27dp"
+        app:layout_constraintStart_toEndOf="@+id/btBack"
+        app:layout_constraintTop_toTopOf="@+id/btBack"
+        android:layout_marginStart="16dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/btBack"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:itemCount="1"
+        tools:listitem="@layout/list_produk" />
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/rounded_border"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <ImageButton
-            android:id="@+id/btBack"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/back" />
+        android:id="@+id/linearLayout4"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/border_shadow"
+        android:layout_marginBottom="8dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="132dp"
-            android:text="Cart"
-            android:textColor="@color/white"
-            android:textSize="27dp" />
+            android:text="TOTAL :"
+            android:textStyle="bold"
+            android:textSize="15dp"
+            android:padding="5dp"/>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.097"
-        tools:layout_editor_absoluteX="0dp">
-
-
-        <LinearLayout
-            android:id="@+id/viewProduk"
-            android:layout_width="350dp"
-            android:layout_height="140dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:background="@drawable/border_shadow"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgProduk"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/susu" />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tvNamaProduk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="20dp"
-                    android:text="Nama Produk"
-                    android:textSize="18dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/tvHargaProduk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="5dp"
-                    android:text="Harga Produk"
-                    android:textSize="15dp" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginRight="20dp"
-                    android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/btAddProduk"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:background="@drawable/add_button" />
-
-                    <TextView
-                        android:id="@+id/tvJumlahProduk"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="1dp"
-                        android:text="1"
-                        android:textSize="20dp" />
-
-                    <ImageButton
-                        android:id="@+id/btMinusProduk"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:background="@drawable/min_button" />
-
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-
-
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerViewCart"
-            android:contentDescription="ini adalah produk di keranjang"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tvTotalHarga"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:itemCount="2"
-            tools:listitem="@layout/list_produk"/>
-
-    </LinearLayout>
-
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="-16dp"
-        android:background="@drawable/border_shadow">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TOTAL :"
-                android:textStyle="bold"
-                android:textSize="15dp"
-                android:padding="5dp"/>
-
-            <TextView
-                android:id="@+id/tvTotalHarga"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:text="Rp.0,00"
-                android:textSize="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="70dp"/>
-        </LinearLayout>
+            android:text="Rp.0,00"
+            android:textSize="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="70dp"
+            android:layout_weight="1"/>
 
         <Button
             android:id="@+id/btCheckout"
@@ -178,8 +73,5 @@
             android:text="Checkout"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="40dp"/>
-
-
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
