mulai membuat tampilan

--- a/app/src/main/res/layout/milk_page.xml
+++ b/app/src/main/res/layout/milk_page.xml
@@ -12,6 +12,7 @@
         android:background="@drawable/rounded_border">
 
         <ImageButton
+            android:id="@+id/btToDashboard"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginLeft="5dp"
