--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bgLogin"
+        android:background="@drawable/bg_login"
         android:orientation="vertical"
         android:paddingHorizontal="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
