--- a/app/src/main/res/layout/milk_page.xml
+++ b/app/src/main/res/layout/milk_page.xml
@@ -47,16 +47,16 @@
 
 
         <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@drawable/border_shadow"
+            android:background="@drawable/bg_produk"
             android:layout_marginLeft="20dp">
 
             <ImageView
                 android:id="@+id/imageProduk"
                 android:contentDescription="ini adalah gambar produk"
-                android:layout_width="100dp"
+                android:layout_width="130dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_height="120dp"
                 android:layout_marginTop="15dp"/>
@@ -67,6 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="15dp"
+                android:textColor="@color/white"
                 android:text="Nama Produk"
                 android:textSize="16dp"
                 android:textStyle="bold" />
@@ -79,12 +80,17 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="10dp"
                 android:text="Rp.0,00"
+                android:textColor="@color/white"
                 android:textSize="15dp" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/btAddToCart"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="31dp"
+                android:layout_height="30dp"
+                android:layout_gravity="end"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/bt_cart"
                 android:text="add to cart"/>
 
         </LinearLayout>
