--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,85 +7,95 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:layout_marginTop="15dp"
+    android:background="@color/mainColor"
     android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="159dp"
-        android:layout_height="210dp"
-        android:layout_marginTop="72dp"
-        android:src="@drawable/logo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <LinearLayout
+        android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_login"
+        android:layout_marginTop="96dp"
         android:orientation="vertical"
-        android:paddingHorizontal="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
         <TextView
-            android:layout_width="250dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="35dp"
-            android:background="@drawable/tvs_selamat_datang" />
-
-
-        <EditText
-            android:id="@+id/lgEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/username"
-            android:hint="Username"
-            android:inputType="textEmailAddress"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Selamat Datang di EazyEat"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="20sp" />
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/lgPassword"
-            android:layout_width="match_parent"
+        <TextView
+            style="@style/PoppinsText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/username"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textColorHint="@color/white"
-            android:textSize="20sp" />
+            android:layout_gravity="center_horizontal"
+            android:paddingHorizontal="90dp"
+            android:text="Pesan makan dan minum jadi lebih mudah bersama EazyEat"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="14dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal">
+    </LinearLayout>
 
-            <ImageButton
-                android:id="@+id/lgLogin"
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/btlogin" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:src="@drawable/logo_fix"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
 
-            <ImageButton
-                android:id="@+id/lgRegister"
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="30dp"
-                android:background="@drawable/bt_register" />
+    <Button
+        android:id="@+id/btDaftar"
+        android:layout_width="306dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="88dp"
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Daftar"
+        android:textColor="@color/mainColor"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btDaftar"
+        app:layout_constraintVertical_bias="0.23">
 
-        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"
+            android:text="Sudah mendaftar?"
+            android:textColor="@color/white"
+            android:textSize="12dp" />
+
+        <TextView
+            android:id="@+id/linkLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_regular"
+            android:layout_marginLeft="3dp"
+            android:text="Masuk"
+            android:textColor="@color/white"
+            android:textSize="12dp"
+            tools:layout_editor_absoluteX="244dp"
+            tools:layout_editor_absoluteY="626dp" />
+
     </LinearLayout>
 
 
