--- a/app/src/main/res/drawable/custom_checkbox.xml
+++ b/app/src/main/res/drawable/custom_checkbox.xml
@@ -8,7 +8,8 @@
                     <corners android:radius="4dp" />
                 </shape>
             </item>
-            <item android:drawable="@drawable/ic_checked" />
+<!--            <item android:drawable="@drawable/ic_checked" />-->
+            <item/>
         </layer-list>
     </item>
     <item>
@@ -19,7 +20,8 @@
                     <corners android:radius="4dp" />
                 </shape>
             </item>
-            <item android:drawable="@drawable/ic_unchecked" />
+<!--            <item android:drawable="@drawable/ic_unchecked" />-->
+            <item/>
         </layer-list>
     </item>
 </selector>
