--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -1,99 +1,179 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:layout_marginHorizontal="15dp"
-    android:layout_marginTop="15dp"
-    android:orientation="vertical">
+    tools:context=".LoginPage"
+    android:background="@drawable/bg_login">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:text="Form Register"
-        android:textSize="25sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/etName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:hint="Nama Lengkap"
-        android:inputType="textPersonName|textCapWords"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:id="@+id/etUsername"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="Username"
-        android:inputType="textPersonName|textCapWords"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:id="@+id/etEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="Email"
-        android:inputType="textEmailAddress"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:id="@+id/etCallNum"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="Nomor Telpon"
-        android:inputType="number"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:id="@+id/etPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textSize="20sp"/>
-
-    <EditText
-        android:id="@+id/etConfirmPass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:hint="Konfirmasi Password"
-        android:inputType="textPassword"
-        android:textSize="20sp"/>
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="73dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="24dp"
+        android:src="@drawable/logo_fix"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:id="@+id/linearLayout7"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:orientation="vertical"
+        android:paddingHorizontal="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="0dp">
 
-        <Button
-            android:id="@+id/svRegister"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:text="REGISTER" />
 
-        <Button
-            android:id="@+id/toLogin"
+        <!--        <EditText-->
+        <!--            android:id="@+id/etName"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="20dp"-->
+        <!--            android:hint="Nama Lengkap"-->
+        <!--            android:background="@drawable/et_username"-->
+        <!--            android:inputType="textPersonName|textCapWords"-->
+        <!--            android:textSize="20sp" />-->
+
+        <EditText
+            android:id="@+id/etUsername"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/et_username"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Username"
+            android:inputType="textPersonName|textCapWords"
+            android:paddingLeft="45dp"
+            android:textSize="12sp" />
+
+        <EditText
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/et_email"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:paddingLeft="45dp"
+            android:textSize="12sp" />
+
+        <!--        <EditText-->
+        <!--            android:id="@+id/etCallNum"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginTop="15dp"-->
+        <!--            android:hint="Nomor Telpon"-->
+        <!--            android:inputType="number"-->
+        <!--            android:textSize="20sp" />-->
+
+        <EditText
+            android:id="@+id/etPassword"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/et_password"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:paddingLeft="45dp"
+            android:textSize="12sp" />
+
+        <EditText
+            android:id="@+id/etConfirmPass"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/et_password"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="Konfirmasi Password"
+            android:inputType="textPassword"
+            android:paddingLeft="45dp"
+            android:textSize="12sp" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="50dp"
-            android:layout_height="wrap_content"
-            android:text="LOGIN" />
+            android:layout_height="wrap_content">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:text="I agree to the"
+                android:textSize="10dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular"
+                android:text="Terms and Condition"
+                android:textColor="@color/mainColor"
+                android:textSize="10dp" />
+        </LinearLayout>
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Daftar Sekarang"
+        android:textColor="@color/mainColor"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/svRegister"
+        tools:layout_editor_absoluteX="50dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/poppins_regular"
+            android:text="Sudah punya akun?"
+            android:textSize="12dp" />
+
+
+        <TextView
+            android:id="@+id/toLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Masuk dari sini"
+            android:textColor="@color/mainColor"
+            android:textSize="12dp"
+            tools:layout_editor_absoluteX="140dp"
+            tools:layout_editor_absoluteY="667dp" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/svRegister"
+        android:layout_width="290dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="@color/mainColor"
+        android:fontFamily="@font/poppins_medium"
+        android:text="Daftar"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
