--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="borderColor">#D9ED82</color>
     <color name="mainColor">#007965</color>
     <color name="transparent">#80FFFFFF</color>
+    <color name="semi_grey">#E6E6E6</color>
 </resources>
