--- a/app/src/main/res/layout/dashboard_page.xml
+++ b/app/src/main/res/layout/dashboard_page.xml
@@ -9,12 +9,14 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="465dp"
-        android:layout_height="164dp"
+        android:layout_width="458dp"
+        android:layout_height="183dp"
         android:layout_marginTop="4dp"
         android:src="@drawable/bg_dashboard"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-16dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editText"
@@ -320,7 +322,7 @@
         android:background="@color/mainColor"
         android:orientation="vertical"
         android:paddingHorizontal="20dp"
-        android:paddingVertical="30dp"
+        android:paddingVertical="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
         app:layout_constraintVertical_bias="0.0"
